--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ main{
 }
 
 h1{
-    font-size: 170px;
+    font-size: 10vw;
     font-style: oblique;
     font-family: sans-serif;
     text-align: center;
     color: white;
-    -webkit-text-stroke-width: 8px;
+    -webkit-text-stroke-width: 0.5vw;
     -webkit-text-stroke-color: black;
     margin: 50px 80px 100px 80px;
     text-decoration:underline;
@@ -47,8 +47,9 @@ h2{
     color: white;
     margin-top: 15px;
     background-color: black;
-    padding: 12px;
+    padding: 1vh;
     margin-bottom: 1.5vw;
+    width: 20vw;
 }
 
 .musical-container{
@@ -56,7 +57,7 @@ h2{
     flex-direction: column;
     text-align: center;
     gap: 1.5vw;
-    margin: 0px 2vw 200px 2vw;
+    margin: 0px 2vw 20vh 2vw;
 }
 
 .musical-container a {
@@ -86,3 +87,5 @@ footer{
     color: white;
     background-color: black;
 }
+
+    
